force-app/main/default/objects/Verkoopspotentieel__c/Verkoopspotentieel__c.object-meta.xml
<CustomObject>
    <label>EU-Verkoopspotentieel</label>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verkoopspotentieel</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>