force-app/main/default/objects/Verkoopspotentieel__c/fields/Aantal__c.field-meta.xml
<CustomField>
    <fullName>Aantal__c</fullName>
    <label>Aantal</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>