force-app/main/default/objects/Verkoopspotentieel__c/fields/Avalanche_Segment__c.field-meta.xml
<CustomField>
    <fullName>Avalanche_Segment__c</fullName>
    <label>Avalanche Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>