force-app/main/default/objects/Verkoopspotentieel__c/fields/Potential__c.field-meta.xml
<CustomField>
    <fullName>Potential__c</fullName>
    <label>Potential</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>