force-app/main/default/objects/Verkoopspotentieel__c/fields/Potentieel__c.field-meta.xml
<CustomField>
    <fullName>Potentieel__c</fullName>
    <formula>Aantal__c  *  Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potentieel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>